ligolang/src/test/contracts/negative/parametric_types1.ligo
type fail_big_map is map(bool)